[package]
name = "uwucodec"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"
authors = ["trivernis <trivernis@protonmail.com>"]
description = "Encode your data into uwu and back."
repository = "https://github.com/Trivernis/uwucodec"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"